--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
     <dependencies>
         <!-- Core -->
         <dependency>
+            <groupId>org.fusesource.jansi</groupId>
+            <artifactId>jansi</artifactId>
+            <version>2.4.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.jspecify</groupId>
             <artifactId>jspecify</artifactId>
         </dependency>
